# serde-reflection

serde-generate/: Cargo.toml
serde-generate/runtime/golang/: go.mod
serde-generate/runtime/golang/bcs/: bcs_test.go
serde-generate/runtime/golang/bincode/: deserializer.go  serializer.go
serde-generate/src/: cpp.rs  generate.rs  golang.rs  lib.rs  rust.rs
serde-generate/tests/: golang_runtime.rs
serde-name/: Cargo.toml
serde-name/tests/: de_adapter.rs
serde-reflection/: Cargo.toml  README.md  README.tpl
serde-reflection/src/: de.rs  lib.rs  trace.rs
serde-reflection/tests/: serde.rs
