[package]
name = "serde-generate"
version = "0.20.6"
description = "Generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/novifinancial/serde-reflection"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
heck = "0.4.1"
include_dir = "0.7.2"
maplit = "1.0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.6"
serde_yaml = "0.8.24"
structopt = "0.3.21"
textwrap = "0.15.0"

serde-reflection = { path = "../serde-reflection", version = "0.3.5" }
bincode = "1.3.3"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.9.3"
tempfile = "3.3.0"
which = "4.2.5"

[[bin]]
name = "serdegen"
path = "src/generate.rs"
test = false
